# cmake_practice

./: README.md
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.c
t4/: CmakeLists.txt
t4/src/: CMakeLists.txt
