cmake_minimum_required(VERSION 3.15)  # first line

SET(LIBHELLO_SRC hello.c)  # 变量赋值
ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})  # 输出动态库
ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})  # 输出静态库
SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")  # 修改输出的lib名字 设置输出的名字
GET_TARGET_PROPERTY(OUTPUT_VALUE hello_static OUTPUT_NAME)
MESSAGE(STATUS “This is the hello_static OUTPUT_NAME:  ”${OUTPUT_VALUE})
SET_TARGET_PROPERTIES(hello PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(hello_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 1.2 SOVERSION 1)